# python-apps

./: .gitignore  LICENSE  README.md
@base/: conditional.py  dictionary.py  exception.py  function.py  inheritance.py  lambda.py  list.py  loops.py  string.py  tuples.py
PYChart/: biology.human.fasta  chart.py  mock.py  population.csv  requirements.txt
PYCoin/: Main.py  README.md  main.py
PYCoin/core/: Executor.py
PYCoin/entities/: Coin.py  coin.py
PYCoin/services/: HttpService.py
PYService/: Main.py  README.md  TokenMain.py  TokenService.py
PYService/controllers/: TaskController.py  task_controller.py
PYTime/: main.py
PYTime/app/: controller.py  form.py
PYToken/: Main.py  README.md  TokenService.py  main.py  requirements.txt
crawler-enem/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
crawler-enem/app/: __init__.py  export_data.py  extract_files.py
elk-app/: README.md  docker-compose.yml  logstash-simple.conf  main.py
fastapi-apps/web-sockets/: .gitignore  README.md  main.py  requirements.txt
flask-apps/sample-api/: README.md  main.py
flask-apps/secure-api/: README.md  main.py  requirements.txt
py-async-http/: .gitignore  README.md  api.py  main.py  pyproject.toml
py-cassandra/: .gitignore  README.md  docker-compose.yml  main.py  requirements.txt  run.sh
py-cassandra/cassandra/: init.cql
py-chart/: README.md  biology.py  chart.py  population.py  requirements.txt
py-chart/data/: biology.escherichia.fasta  mock.py
py-cryptocurrency/: README.md  main.py  requirements.txt
py-flask-api/: README.md  requirements.txt
py-gsheets/: .gitignore  README.md  config.py  main.py  pyproject.toml  settings.toml
py-oracle/: Dockerfile  README.md  docker-compose.yml  init.sql  main.py
py-ping/: .gitignore  README.md  main.py  pyproject.toml
py-ping/src/: arguments.py
py-postgres/: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  mock.py  pyproject.toml
py-postgres/resources/: init-db.sql
py-postgres/src/: __init__.py  util.py
py-secure-api/: .gitignore  README.md  main.py  requirements.txt  token_service.py
py-spark/: .gitignore  README.md  requirements.txt  run.sh
py-spark/src/: first.py  (+3 more)
py-threads/: README.md  multiple-files.py  single-file.py  utils.py
py-tweet/: .gitignore  README.md  requirements.txt
web-scraping/: README.md  main.py  requirements.txt
(+14 files in other folders)
