[tool.poetry]
name = "crawler-enem"
version = "0.0.1"
description = "Enem Crawler"
authors = ["anthony.caliani <avcaliani.it@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pyspark = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
