[tool.poetry]
name = "async-http"
version = "0.0.1"
description = "PoC: Async HTTP Resquest"
authors = ["Anthony Caliani <anthony.caliani@olist.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.79.0"}
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
