[tool.poetry]
name = "py-gsheets"
version = "0.0.1"
description = "Python project to read Google Sheets."
authors = ["Anthony Caliani <avcaliani.it@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.4"
dynaconf = "^3.1.7"
oauth2client = "^4.1.3"
google-api-python-client = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
