[tool.poetry]
name = "postgres-app"
version = "0.0.1"
description = "Postgres App: Some experiments to understand better Postgress database."
authors = ["Anthony Caliani <avcaliani.it@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
Faker = "^8.12.1"
validate-docbr = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
